# mongodb-traveller-deepagents

./: .env.example  .gitignore  DEMO_SCRIPT.md  Demo Flow (4 Acts, 7 Messages).md  INSTRUCTOR_DEMO.md  README.md  langgraph.json  pyproject.toml
notebooks/: travel_planner_walkthrough.ipynb
scripts/: bootstrap_atlas.py  demo_semantic_cache.py  list_search_indexes.py  reset_demo.py  run_ui.sh
src/deepagents_mongodb/: __init__.py  agent.py  cache.py  checkpointer.py  cli.py  config.py  graph.py  graph_store.py  llm.py  mongo.py  store.py  subagents.py
src/deepagents_mongodb/knowledge/: ingest.py  retriever_tool.py  seed_data.py
src/deepagents_mongodb/tools/: __init__.py  activities.py  budget.py  flights.py  hotels.py  memory.py  restaurants.py
tests/: test_smoke.py
ui/src/app/: page.tsx
ui/src/app/components/: ConfigDialog.tsx
ui/src/lib/: config.ts
