[project]
name = "deepagents-mongodb"
version = "0.1.0"
description = "Travel planner demo: LangChain DeepAgents + MongoDB Atlas (checkpointer, store, vector search, semantic cache)"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [{ name = "deepagents-mongodb demo" }]
license = { text = "MIT" }

dependencies = [
    "deepagents>=0.6.4",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-voyageai>=0.1.4",
    "langchain-mongodb>=0.6.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "langgraph-store-mongodb>=0.3.0",
    "pymongo>=4.8.0",
    "python-dotenv>=1.0.1",
    "typer>=0.12.5",
    "rich>=13.7.0",
    "langgraph-cli[inmem]>=0.2.0",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0.0", "ipykernel>=6.29.0"]
dev = ["pytest>=8.0.0"]
ui = ["langgraph-cli[inmem]>=0.2.0"]

[project.scripts]
deepagents-mongodb = "deepagents_mongodb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepagents_mongodb"]
